<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vision</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text8">BCA(Bachelor Of Computer Application) Department Burdwan University</string>
    <string name="text12">About</string>
    <string name="text9">About Our  Startup:-
        🚀 Crafting Innovative Android Experiences! 📱 | We are [Bluebird], your go-to Android app development wizards. 🧙‍♂️ Transforming ideas into sleek, user-friendly apps that captivate and conquer. 🌟 Let\'s code your success story together! 🌐 #AndroidAppDev #InnovationUnleashed 📈.
   PREFACE TO THE Vison:-  Question paper is an instrument which is used in theory and practical examination. It has four characteristics-relevance, objectivity, reliability and validity.Questioning is the most important device of teaching. The teacher keeps in close touch with his class by means of questioning. The teaching-learning process becomes effective, when knowledge is given and shares in the class,through this questioning.  i) Question should be definite rather than vague.  ii) It should be relevant to the theme.  iii) Question should be continuous one.  The questions format of this application follows syllabus and questions of Burdwan University,Maulana Abul Kalam Azad University of Technology . We design this application for the student of BCA ,BSC Bio TechnologyBSC.Bio Chemistry,BBA. This application is very much user-friendly and includes all subjects in one volume.  [NOTE: Read the syllabus carefully. There are some changes in the syllabus of all Department (BCA, BSC.Bio Technology BSC. Bio Chemistry , BBA)We have compiled previous year questions in this Application.] </string>
    <string name="_101_computer_fundamental">101-Computer FundaMental</string>
    <string name="todo2">TODO2</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="password">Password</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="email">Email</string>
    <string name="login2">Login</string>
    <string name="todo3">TODO3</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account_login">Do you have an account? LogIn</string>
    <string name="enter_the_confirm_password">Enter the Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_the_password1">Enter the Password</string>
    <string name="password3">Password</string>
    <string name="enter_the_email6">Enter the Email</string>
    <string name="email8">Email</string>
    <string name="enter_the_name9">Enter the Name</string>
    <string name="name0">Name</string>
    <string name="register8">Register</string>
    <string name="logout">LogOut</string>
    <string name="todo6">TODO</string>
    <string name="profile">Profile</string>
    <string name="todo78">TODO45</string>
    <string name="todooo">TODOpp</string>
    <string name="text68">CardName</string>
    <string name="Vison" />
    <string name="devoloper">Sayan Majumder</string>
    <string name="devoloper_detail">Devoloper Detail</string>
    <string name="send">Send Email</string>
    <string name="sayanmajumder566">sayanmajumder566@gmail.com</string>
    <string name="devoloperabout">About the Developer:- My name is Sayan Majumder, a passionate Android developer with over 2 years of hands-on experience in crafting user-friendly and efficient mobile applications. Currently, I am pursuing a Bachelor of Computer Applications (BCA) at the Burdwan Institute of Management and Computer Science, where I am honing my skills in software development, problem-solving, and emerging technologies. As a dedicated developer, I thrive on building applications that deliver seamless user experiences, employing cutting-edge tools and techniques in Android development. I have a strong foundation in Java, Kotlin, Flutter, and mobile architecture, with a focus on clean, maintainable, and scalable code. When I\'m not coding, I’m exploring new technologies and enhancing my expertise to deliver innovative solutions. My journey in Android development reflects my commitment to providing high-quality applications that meet user needs and industry standards.</string>
    <string name="hii">hii</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat_with_ai">Chat With Ai</string>
    <string name="sendy">Send</string>
    <string name="type_a_messagey" tools:ignore="TypographyEllipsis">Type a message...</string>
    <string name="todo">back</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="page_1">Page 1</string>
    <string name="swipe_right_to_left">Swipe Right to Left!</string>

</resources>