<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/untitleddesignh"
    tools:ignore="Overdraw">
    <ImageView android:layout_width="@dimen/dim_300"
        android:layout_height="@dimen/dim_200"
        android:src="@drawable/vih"
        android:layout_gravity="center"
        android:contentDescription="@string/todo2"
        tools:ignore="VisualLintBounds" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="627dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        tools:ignore="TextSizeCheck,VisualLintBounds">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_10"
            android:text="@string/login2"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_40"
            android:layout_marginTop="@dimen/dim_10"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_48"
            android:layout_marginLeft="@dimen/dim_35"
            android:layout_marginTop="@dimen/dim_7"
            android:layout_marginRight="@dimen/dim_35"
            android:autofillHints=""
            android:background="@drawable/forget"
            android:hint="@string/enter_the_email"
            android:paddingLeft="16dp"
        android:paddingRight="16dp"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_40"
            android:layout_marginTop="@dimen/dim_10"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_48"
            android:layout_marginLeft="@dimen/dim_35"
            android:layout_marginTop="@dimen/dim_7"
            android:layout_marginRight="@dimen/dim_35"
            android:autofillHints=""
            android:background="@drawable/forget"
            android:hint="@string/enter_the_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
        android:paddingRight="16dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/forgotPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dim_20"
            android:layout_marginRight="@dimen/dim_30"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,TextSizeCheck" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="@dimen/dim_60"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_15"
            android:indeterminate="true"
            android:indeterminateTint="#FF0000"
            android:visibility="gone"
            tools:ignore="ObsoleteLayoutParam" />

        <Button
            android:id="@+id/LoginBtn1"
            android:layout_width="@dimen/dim_200"
            android:layout_height="@dimen/dim_50"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_20"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#263238"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_20"
            android:layout_marginBottom="@dimen/dim_20"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
